WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284143
[Floats] Citi.com login renders incorrectly, login field is shrunk to the side
https://bugs.webkit.org/show_bug.cgi?id=284143
Summary
[Floats] Citi.com login renders incorrectly, login field is shrunk to the side
alan
Reported
2024-12-05 19:26:41 PST
<
rdar://140472029
>
Attachments
[fast-cq]Patch
(6.67 KB, patch)
2024-12-05 19:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.67 KB, patch)
2024-12-06 05:22 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-12-05 19:39:26 PST
Created
attachment 473480
[details]
[fast-cq]Patch
EWS
Comment 2
2024-12-06 05:21:51 PST
Committed
287442@main
(cd5c9f5b2696): <
https://commits.webkit.org/287442@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473480
[details]
.
alan
Comment 3
2024-12-06 05:22:17 PST
Reopening to attach new patch.
alan
Comment 4
2024-12-06 05:22:18 PST
Created
attachment 473482
[details]
Patch
alan
Comment 5
2024-12-06 05:27:36 PST
ok, so it did get landed eventually (first cq+ failed with connection error),
EWS
Comment 6
2024-12-10 15:21:20 PST
Committed
283286.573@safari-7620-branch
(0622d7e93106): <
https://commits.webkit.org/283286.573@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2378 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug