[Floats] Citi.com login renders incorrectly, login field is shrunk to the side https://bugs.webkit.org/show_bug.cgi?id=284143 <rdar://140472029>

Unreviewed revert.

This is a revert of 283298@main (and its follow-up fix of 286637@main>).

Apparently part of the layout code relies on the fact that negative margins make the available space wider (they don't).
While adjusting the caller logic (RenderBlockFlow::getClearDelta) fixes this incorrect behavior, it also already introduced a regression -see 249370@main (which later got reverted).

* LayoutTests/TestExpectations:
* LayoutTests/fast/block/float/float-with-negative-margin-formatting-context-root-expected.html: Added.
* LayoutTests/fast/block/float/float-with-negative-margin-formatting-context-root.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::shrinkLogicalWidthToAvoidFloats const):

Canonical link: https://commits.webkit.org/287442@main